# vcf-ops-harness

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  vrops-site-map.example.json
docs/superpowers/plans/: 2026-06-10-vrops-diagnose.md  2026-06-11-operations-assistant-fleet-queries.md  2026-06-11-vm-placement-recommendation.md  2026-06-12-proactive-alert-notification.md
docs/superpowers/specs/: 2026-06-10-vrops-diagnose-design.md  2026-06-11-operations-assistant-fleet-queries-design.md  2026-06-11-vm-placement-recommendation-design.md  2026-06-12-proactive-alert-notification-design.md
scripts/: send-test-alert.sh
src/: main.py
src/actions/: registry.py
src/actions/builtin/: echo.py  get_time.py
src/actions/builtin/vrops/: __init__.py  actions.py  analysis.py  diagnose.py  fleet.py  placement.py  reports.py  sites.py  vrops_client.py
src/ai/: anthropic_llm.py  llm.py
src/config/: settings.py  types.py
src/memory/: memory.py
src/pipeline/: orchestrator.py
src/slack/: bot.py
src/utils/: logger.py  retry.py
src/webhook/: alerts.py  handler.py  publisher.py  server.py
tests/: test_alerts.py  test_analysis.py  test_diagnose.py  test_fleet_queries.py  test_imports.py  test_placement.py  test_robustness.py  test_settings.py  test_slack_dispatch.py  test_webhook.py
