[project]
name = "ai-harness"
version = "0.1.0"
description = "AI Orchestration Harness — Slack Chat Bot with pluggable action/LLM support"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "slack-bolt>=1.21.0",
    "openai>=1.55.0",
    "python-dotenv>=1.0.1",
    "websocket-client>=1.6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"